center bottom navigation buttons and fixed bug with transitioning in first page, adjusted consent flow z-index

--- a/src/css/bootstrap/custom.scss
+++ b/src/css/bootstrap/custom.scss
@@ -965,7 +965,7 @@ select {
     }
 
     .customRowHeight {
-      height: 70px;
+      height: 60px;
     }
     .mask {
       border: solid 4px rgba(108, 122, 137, 0.3);
@@ -986,7 +986,11 @@ select {
 
     .marginTop50 > button {
       min-width: 0px !important;
-      height: 40px;
+      margin: auto;
+      margin-top: 5px;
+      padding: 1px;
+      min-height: 50px;
+      min-width: 55px;
       width: 50px  !important;
       border-radius: 10px;
     }
